ocaml/testsuite/tests/jane-modular-syntax/user_error3_1.compilers.reference
File "user_error3_1.ml", line 9, characters 31-64:
9 | let _misnamed_extension = () [@jane.this_extension_doesn't_exist];;
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Cannot have an attribute named [@jane.this_extension_doesn't_exist]: Missing a feature component
